--- a/device.yaml
+++ b/device.yaml
@@ -1969,7 +1969,7 @@ MAX_ERROR:
 RELATIVE_STATE_OF_CHARGE:
   type: register
   address: 0x0D
-  size_bits: 8
+  size_bits: 16
   reset_value: 0
   access: RO
   fields:
@@ -2088,7 +2088,12 @@ BATTERY_STATUS:
   address: 0x16
   size_bits: 16
   access: RO
+  allow_bit_overlap: true
   fields:
+    RAW:
+      base: uint
+      start: 0
+      end: 16
     EC:
       base: uint
       access: RO
@@ -3633,6 +3638,30 @@ LIFETIME_DATA_BLOCK_5:
       access: RO
       start: 240
       end: 256
+
+TURBO_RHF_EFFECTIVE:
+  type: register
+  address: 0x68
+  size_bits: 16
+  access: RO
+  fields:
+    TURBO_RHF_EFFECTIVE:
+      base: uint
+      access: RO
+      start: 0
+      end: 16
+
+TURBO_VLOAD:
+  type: register
+  address: 0x69
+  size_bits: 16
+  access: RO
+  fields:
+    TURBO_VLOAD:
+      base: uint
+      access: RO
+      start: 0
+      end: 16
 
 MANUFACTURE_INFO:
   type: buffer
